# Fx_Trading_Platform-R-D

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMMANDS.md  FX_PRD.md  FX_Plan_Review_v2.1.md  FX_Stories_Frontend.md  FX_Stories_NodeAPI.md  FX_Stories_PythonQuant.md  PLATFORM_EXPLAINER.md  README.md  biome.json  note.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  python_commands.md  turbo.json
.github/workflows/: ci.yml  deploy.yml
apis/node-api/: Dockerfile  openapi.json  package.json  prisma.config.ts  tsconfig.json  tsconfig.verify.json
apis/node-api/prisma/: schema.prisma  seed.ts  timescale.sql
apis/node-api/scripts/: apply-timescale.ts  enqueue-intent.ts  openapi.ts  run-agentic-backtest.ts  seed-broker-credentials.ts  trip-signals.ts
apis/node-api/src/: app.test.ts  app.ts  audit.test.ts  audit.ts  context.test.ts  context.ts  db.ts  env.test.ts  env.ts  events.ts  otel.ts  server.ts  ws-bridge.ts
apis/node-api/src/auth/: email.ts  guards.test.ts  guards.ts  invites.test.ts  invites.ts  jwt.test.ts  jwt.ts  password.ts  recovery-codes.test.ts  recovery-codes.ts  service.ts  tokens.test.ts  tokens.ts  totp.test.ts  totp.ts
apis/node-api/src/backtest/: agentic-runner.test.ts  agentic-runner.ts  backtest-memory.test.ts  backtest-memory.ts  llm-cache.test.ts  llm-cache.ts  simulated-execution.test.ts  simulated-execution.ts
apis/node-api/src/calendar/: calendar-service.test.ts  calendar-service.ts  forexfactory.test.ts  forexfactory.ts
apis/node-api/src/chaos/: chaos.test.ts
apis/node-api/src/crypto/: credentials.test.ts  credentials.ts  seal.test.ts  seal.ts
apis/node-api/src/execution/: execution-worker.test.ts  halt.ts  kill-switch.test.ts  kill-switch.ts  test-fakes.ts  (+4 more)
apps/dashboard/: Dockerfile  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json
apps/dashboard/e2e/: a11y.spec.ts  helpers.ts  mobile.spec.ts
apps/dashboard/src/: auth.ts  middleware.ts
development-plan/: AUDIT_REPORT.md  CURSOR_PROMPT_Step-2.2.md  DEVLOG-phase1.md  DEVLOG-phase2.md  DEVLOG.md  DEVLOG_current.md  DEVLOG_phase2.md  DEVLOG_phase3.md  DEVLOG_phase4.md  DEVLOG_phase5.md  FX_PRD.md  FX_Stories_Frontend.md  FX_Stories_PythonQuant.md  FX_Trading_Platform_Development_Plan.md  PHASE2_TESTING_GUIDE.md  PHASE3_TESTING_GUIDE.md  PHASE4_TESTING_GUIDE.md  PHASE5_TESTING_GUIDE.md  PHASE6_TESTING_GUIDE.md  STEP_1.6_SETUP.md
infra/: Caddyfile  DEPLOY.md  docker-compose.local.yml  docker-stack.yml
infra/backup/: BACKUP.md  backup.sh  drill-log.md  restore-drill.sh
infra/db/init/: 001-extensions.sql
infra/deploy/: deploy.sh
infra/observability/: README.md  prometheus.yml  tempo.yml
scripts/: check-env.mjs  check-migrations.mjs
services/quant/: .gitignore  Dockerfile  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
services/quant/app/: __init__.py  __main__.py  config.py  main.py  routes_backtest.py  routes_replay.py  routes_report.py  routes_validation.py  telemetry.py
services/quant/app/backtest/: __init__.py  ablation.py  costs.py  engine.py  pit.py  service.py  validation.py
services/quant/app/contracts/: ApiError.py  AuditLogEntry.py  AuditLogPage.py  AuditLogQuery.py  Broker.py  BrokerPosition.py  BrokerTradeRecord.py  FXSession.py  HealthResponse.py  Instrument.py  OrderRequest.py  OrderResult.py  OrderSide.py  OrderStatus.py  Trade.py  TradeSide.py  TradesListResponse.py  TradingMode.py  WsClientMessage.py  WsServerMessage.py  __init__.py
services/quant/app/contracts/schemas/: ApiError.json  AuditLogEntry.json  AuditLogPage.json  AuditLogQuery.json  Broker.json  BrokerPosition.json  BrokerTradeRecord.json  FXSession.json  HealthResponse.json  Instrument.json  OrderRequest.json  OrderResult.json  OrderSide.json  OrderStatus.json  Trade.json  TradeSide.json  TradesListResponse.json  TradingMode.json  WsClientMessage.json  WsServerMessage.json
services/quant/app/execution/: __init__.py  adapter.py  credentials.py  factory.py  models.py  oanda_adapter.py  sizing.py  symbols.py
services/quant/app/grpc/: __init__.py  execution_servicer.py  server.py  servicer.py
services/quant/app/market/: __init__.py  __main__.py  backfill.py  dbio.py  instruments.py  oanda_client.py  publishers.py  runners.py  sentiment.py  stream.py  twelvedata.py
services/quant/app/proto_gen/: __init__.py  quant_pb2.py  quant_pb2.pyi  quant_pb2_grpc.py
services/quant/app/quant/: __init__.py  __main__.py  baseline.py  clusters.py  dbio.py  features.py  labels.py  model.py  paper_validation.py  pipeline.py  regime.py  registry.py  replay.py  risk_report.py  sessions.py  sizing.py  train.py
services/quant/libs/fx_common/: pyproject.toml
services/quant/libs/fx_common/src/fx_common/: __init__.py  context.py  contracts.py  errors.py  logging.py
services/quant/libs/fx_common/tests/: test_fx_common.py
services/quant/proto/: quant.proto
services/quant/scripts/: check_codegen.sh  gen_contracts.py  gen_proto.py  shadow_replay.py
services/quant/tests/: conftest.py  test_backfill.py  test_config.py  test_execution_grpc.py  test_grpc.py  test_healthz.py  test_oanda_client.py  test_runners.py  test_sentiment.py  test_stream.py
services/quant/tests/backtest/: test_ablation.py  test_costs.py  test_engine.py  test_pit.py  test_validation.py
services/quant/tests/execution/: __init__.py  fake_oanda.py  test_conformance.py  test_credentials.py  test_models.py  test_oanda_adapter.py  test_sizing.py  test_symbols.py
services/quant/tests/quant/: conftest.py  test_baseline.py  test_clusters.py  test_features.py  test_labels.py  test_model.py  test_paper_validation.py  test_pipeline.py  test_regime.py  test_registry.py  test_replay.py  test_risk_report.py  test_servicer.py  test_sessions.py  test_sizing.py
system-design/: FX_Architecture_Diagram.mermaid  FX_System_Design.md
workers/watchdog/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
workers/watchdog/src/: alert.ts  env.ts  health.ts  index.ts  oanda.ts  watchdog.ts
workers/watchdog/tests/: watchdog.test.ts
(+159 files in other folders)
