# QN-001 — Quant service scaffold (FastAPI + gRPC). uv-managed, Python 3.13.
# Heavy quant deps (pandas, TA-Lib, lightgbm, vectorbt, …) arrive with their
# stories (QN-02x/QN-04x); keep the scaffold lean so `uv sync` stays fast.
[project]
name = "fx-quant"
version = "0.1.0"
description = "FX platform quant service — deterministic quant core, broker adapters, backtesting"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "grpcio>=1.66",
  "grpcio-health-checking>=1.66",
  "protobuf>=5.28",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "fx-common",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",            # fastapi TestClient transport
  "ruff>=0.6",
  "mypy>=1.11",
  "grpcio-tools>=1.66",     # proto codegen (scripts/gen_proto.py)
  "datamodel-code-generator>=0.26",  # QN-003 contracts codegen
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.workspace]
members = ["libs/fx_common"]

[tool.uv.sources]
fx-common = { workspace = true }

[tool.ruff]
target-version = "py313"
line-length = 100
# Generated code (QN-003 contracts, QN-004 proto stubs) is never hand-edited.
extend-exclude = ["app/contracts", "app/proto_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "libs", "scripts", "tests"]

[[tool.mypy.overrides]]
module = ["app.proto_gen.*", "app.contracts.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["grpc.*", "grpc_health.*", "grpc_tools.*", "google.protobuf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Test/servicer code touches untyped grpc APIs heavily.
module = ["tests.*", "app.grpc.*"]
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["no-untyped-call", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests", "libs/fx_common/tests"]
asyncio_mode = "auto"
